allprojects {
    apply plugin: 'maven'

    group = 'org.pspace'
    version = '1.1.3-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    task packageSources(type: Jar) {
        classifier = 'sources'
        from sourceSets.main.allSource

    }
    artifacts.archives packageSources
    repositories {
        mavenLocal()

        maven { url "https://www.p-space.org/maven2/releases/" }
        maven { url "https://www.p-space.org/maven2/snapshots/" }
        maven { url "https://repository.jboss.org/nexus/content/groups/public-jboss/" }
        maven { url "http://repo.maven.apache.org/maven2" }
    }


}
